--- a/pages/south_menu.html
+++ b/pages/south_menu.html
@@ -20,24 +20,19 @@
             overflow: hidden;
             width: 100%;
             padding: 20px 0;
-            /* Add padding to the carousel */
         }
 
         .carousel-track {
             display: flex;
             transition: transform 0.5s ease-in-out;
             gap: 20px;
-            /* Add gap between dishes */
             padding: 0 20px;
-            /* Add padding to the sides */
         }
 
         .card {
             flex: 0 0 auto;
             width: 300px;
-            /* Set a fixed width for each card */
             margin-right: 20px;
-            /* Add margin between cards */
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             border-radius: 10px;
             overflow: hidden;
@@ -46,23 +41,17 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            /* Center content horizontally */
             text-align: center;
-            /* Center text */
         }
 
         .card:hover {
             transform: scale(1.05);
-            /* Add a hover effect */
         }
 
         model-viewer {
             width: 100%;
-            /* Ensure the model takes full width */
             height: 200px;
-            /* Set a fixed height for the model */
             margin: 0 auto;
-            /* Center the model horizontally */
         }
 
         .carousel-button {
@@ -126,8 +115,6 @@
 
     <div class="indian-menu-container">
         <div class="menu-container">
-            <!-- Navigation -->
-
             <!-- Hero Section -->
             <section class="hero-section">
                 <div>
@@ -139,11 +126,8 @@
                     </p>
                 </div>
                 <div class="hero-image">
-                    <div class="hero-image">
-                        <img src="/assets/menu_images/southmain.jpg" alt="Main Dish">
-                    </div>
+                    <img src="/assets/menu_images/southmain.jpg" alt="Main Dish">
                 </div>
-                
             </section>
 
             <!-- Menu Cards Carousel -->
@@ -200,23 +184,23 @@
                     </model-viewer>
                 </div>
                 <div class="special-text">
-                    <h2>Our South Indian Secret<h2>
-                            <p>
-                                At our restaurant, we craft authentic South Indian dishes using the finest ingredients,
-                                aromatic spices, and traditional cooking techniques. From crispy dosas to fluffy idlis,
-                                every dish is made with passion to bring you the true taste of South India.
-                            </p>
+                    <h2>Our South Indian Secret</h2>
+                    <p>
+                        At our restaurant, we craft authentic South Indian dishes using the finest ingredients,
+                        aromatic spices, and traditional cooking techniques. From crispy dosas to fluffy idlis,
+                        every dish is made with passion to bring you the true taste of South India.
+                    </p>
                 </div>
             </section>
 
-            <!-- Modals for each dish (same as before) -->
+            <!-- Modals for each dish -->
             <!-- Masala Dosa model -->
             <div class="modal" id="modal-dosa">
                 <div class="modal-content">
                     <span class="close-btn">×</span>
                     <h1 class="modal-title">You Made a Delicious Choice!</h1>
                     <div class="modal-dish">
-                        <model-viewer src="../assets/menu_images/3d_glb/dosa.glb" alt="3D Model" auto-rotate
+                        <model-viewer src="../assets/menu_images/3d_glb/Dosa.glb" alt="3D Model" auto-rotate
                             camera-controls ar>
                         </model-viewer>
                         <div class="dish-details">
@@ -269,9 +253,8 @@
                     </div>
                 </div>
             </div>
-            <!-- Masala Dosa ends model -->
 
-            <!-- Idli Sambhar model starts  -->
+            <!-- Idli Sambhar model -->
             <div class="modal" id="modal-idli">
                 <div class="modal-content">
                     <span class="close-btn">×</span>
@@ -329,15 +312,14 @@
                     </div>
                 </div>
             </div>
-            <!-- Idli Sambhar model ends  -->
 
-            <!-- Medu Vada model starts  -->
+            <!-- Medu Vada model -->
             <div class="modal" id="modal-vada">
                 <div class="modal-content">
                     <span class="close-btn">×</span>
                     <h1 class="modal-title">You Made a Delicious Choice!</h1>
                     <div class="modal-dish">
-                        <model-viewer src="../assets/menu_images/3d_glb/vada.glb" alt="3D Model" auto-rotate
+                        <model-viewer src="../assets/menu_images/3d_glb/menu.glb" alt="3D Model" auto-rotate
                             camera-controls ar>
                         </model-viewer>
                         <div class="dish-details">
@@ -389,7 +371,6 @@
                     </div>
                 </div>
             </div>
-            <!-- Medu Vada model ends -->
         </div>
     </div>
 
@@ -603,8 +584,6 @@
         }
 
         document.addEventListener('DOMContentLoaded', () => {
-            // Existing DOMContentLoaded code...
-
             // Update add button event listeners
             document.querySelectorAll('.add-btn').forEach(button => {
                 button.addEventListener('click', (e) => {
