Updated code with latest changes

--- a/pages/punjabi_menu.html
+++ b/pages/punjabi_menu.html
@@ -195,7 +195,7 @@
 
                     <!-- Paneer Tikka -->
                     <div class="card">
-                        <model-viewer src="../assets/menu_images/3d_glb/paneer_tikka.glb" alt="3D Model" auto-rotate
+                        <model-viewer src="../assets/menu_images/3d_glb/palak.glb" alt="3D Model" auto-rotate
                             camera-controls ar>
                         </model-viewer>
                         <h3>Paneer Tikka</h3>
@@ -204,24 +204,24 @@
                     </div>
 
                     <!-- Dal Makhani -->
-                    <div class="card">
+                    <!-- <div class="card">
                         <model-viewer src="../assets/menu_images/3d_glb/dal_makhani.glb" alt="3D Model" auto-rotate
                             camera-controls ar>
                         </model-viewer>
                         <h3>Dal Makhani</h3>
                         <p>Creamy black lentils cooked with butter and spices, a rich and hearty dish.</p>
                         <button class="add-btn" data-modal="modal-dal-makhani">+</button>
-                    </div>
+                    </div> -->
 
                     <!-- Tandoori Chicken -->
-                    <div class="card">
-                        <model-viewer src="../assets/menu_images/3d_glb/tandoori_chicken.glb" alt="3D Model" auto-rotate
+                    <!-- <div class="card">
+                        <model-viewer src="../assets/menu_images/3d_glb/tandoori.glb" alt="3D Model" auto-rotate
                             camera-controls ar>
                         </model-viewer>
                         <h3>Tandoori Chicken</h3>
                         <p>Chicken marinated in yogurt and spices, cooked in a tandoor for a smoky flavor.</p>
                         <button class="add-btn" data-modal="modal-tandoori-chicken">+</button>
-                    </div>
+                    </div> -->
                 </div>
                 <button class="carousel-button next" onclick="shiftDishes(1)">&#10095;</button>
             </section>
@@ -436,10 +436,10 @@
                     <span class="close-btn">×</span>
                     <h1 class="modal-title">You Made a Delicious Choice!</h1>
                     <div class="modal-dish">
-                        <model-viewer src="../assets/menu_images/3d_glb/paneer_tikka.glb" alt="3D Model" auto-rotate
+                        <model-viewer src="../assets/menu_images/3d_glb/palak.glb" alt="3D Model" auto-rotate
                             camera-controls ar>
                             <!-- Fallback image -->
-                            <img src="../assets/menu_images/paneer_tikka.jpg" alt="Paneer Tikka">
+                            <!-- <img src="../assets/menu_images/paneer_tikka.jpg" alt="Paneer Tikka"> -->
                         </model-viewer>
                         <div class="dish-details">
                             <h3>Paneer Tikka</h3>
@@ -552,10 +552,9 @@
             <span class="close-btn">×</span>
             <h1 class="modal-title">You Made a Delicious Choice!</h1>
             <div class="modal-dish">
-                <model-viewer src="../assets/menu_images/3d_glb/tandoori_chicken.glb" alt="3D Model" auto-rotate
+                <model-viewer src="../assets/menu_images/3d_glb/tandoori.glb" alt="3D Model" auto-rotate
                     camera-controls ar>
                     <!-- Fallback image -->
-                    <img src="../assets/menu_images/tandoori_chicken.jpg" alt="Tandoori Chicken">
                 </model-viewer>
                 <div class="dish-details">
                     <h3>Tandoori Chicken</h3>
