--- a/pages/punjabi_menu.html
+++ b/pages/punjabi_menu.html
@@ -199,6 +199,7 @@
                             camera-controls ar>
                         </model-viewer>
                         <h3>Paneer Tikka</h3>
+                        <h3>Palak Paneer </h3>
                         <p>Marinated paneer cubes grilled to perfection, served with mint chutney.</p>
                         <button class="add-btn" data-modal="modal-paneer-tikka">+</button>
                     </div>
