--- a/pages/punjabi_menu.html
+++ b/pages/punjabi_menu.html
@@ -199,30 +199,29 @@
                             camera-controls ar>
                         </model-viewer>
                         <h3>Paneer Tikka</h3>
-                        <h3>Palak Paneer </h3>
                         <p>Marinated paneer cubes grilled to perfection, served with mint chutney.</p>
                         <button class="add-btn" data-modal="modal-paneer-tikka">+</button>
                     </div>
 
                     <!-- Dal Makhani -->
-                    <!-- <div class="card">
-                        <model-viewer src="../assets/menu_images/3d_glb/dal_makhani.glb" alt="3D Model" auto-rotate
+                    <div class="card">
+                        <model-viewer src="../assets/menu_images/3d_glb/dalmakhani.glb" alt="3D Model" auto-rotate
                             camera-controls ar>
                         </model-viewer>
                         <h3>Dal Makhani</h3>
                         <p>Creamy black lentils cooked with butter and spices, a rich and hearty dish.</p>
                         <button class="add-btn" data-modal="modal-dal-makhani">+</button>
-                    </div> -->
+                    </div>
 
                     <!-- Tandoori Chicken -->
-                    <!-- <div class="card">
+                    <div class="card">
                         <model-viewer src="../assets/menu_images/3d_glb/tandoori.glb" alt="3D Model" auto-rotate
                             camera-controls ar>
                         </model-viewer>
                         <h3>Tandoori Chicken</h3>
                         <p>Chicken marinated in yogurt and spices, cooked in a tandoor for a smoky flavor.</p>
                         <button class="add-btn" data-modal="modal-tandoori-chicken">+</button>
-                    </div> -->
+                    </div>
                 </div>
                 <button class="carousel-button next" onclick="shiftDishes(1)">&#10095;</button>
             </section>
@@ -496,10 +495,8 @@
             <span class="close-btn">×</span>
             <h1 class="modal-title">You Made a Delicious Choice!</h1>
             <div class="modal-dish">
-                <model-viewer src="../assets/menu_images/3d_glb/dal_makhani.glb" alt="3D Model" auto-rotate
+                <model-viewer src="../assets/menu_images/3d_glb/dalmakhani.glb" alt="3D Model" auto-rotate
                     camera-controls ar>
-                    <!-- Fallback image -->
-                    <img src="../assets/menu_images/dal_makhani.jpg" alt="Dal Makhani">
                 </model-viewer>
                 <div class="dish-details">
                     <h3>Dal Makhani</h3>
